argocd/templates/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-estate-web-service
spec:
  selector:
    app: real-estate-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
